[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemies/asteroid.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Asteroid.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 35.1283

[node name="Enemy" type="Area2D" groups=["enemy"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, 6 )
shape = SubResource( 1 )

[node name="Movement_Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Change_Move_Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Movement_Timer" to="." method="_on_Movement_Timer_timeout"]
[connection signal="timeout" from="Change_Move_Timer" to="." method="_on_Change_Move_Timer_timeout"]
